NAS4Free 9.1.0.1 - Sandstorm
----------------------------

Changes:

- v9.6 config is forever marked as a blacklist.
- Load zfs.ko and opensolaris.ko from loader.
- Add upgrade method from old system.
- Add reload iSCSI target.
- Add graid geom utility.
- Add kern.geom.debugflags when installing.
- Add rpcinfo utility.
- Wait response of LAN interface if static with gateway.
- Run umount before iSCSI initiator shutdown.
- Upgrade to FreeBSD 9.1-RC1.
- Upgrade istgt to 20120901.
- Upgrade isboot to 0.2.6.

Bug fixes:

- Set default timezone.
- Fix broken modifications.
- Fix wrong mount check.
- Remove extra space.
- Fix istgt reload operation is failed.

Permanent restrictions:
- It is not possible to format a SoftRAID disk with MSDOS FAT16/32.
- It is not possible to encrypt a disk partition, only complete disks are supported.
- Enable 'polling' on interfaces used by a LAGG interface will make it inoperable.

Known bugs:
- If DHCP for IPv4 is used, the IPv6 statically configured DNS server will be
  overriden by the IPv4 DNS server.

NEED TESTING:
- IPv6: auto mode
- All services using IPv6 address (NFS, FTP, etc...)
- Netatalk VFS Samba module (automatically enabled when Netatalk starts) crashes
  samba when accessing to share
- Need to write an online-test procedure

Help needed:
- Need help for adding LDAP authentication feature:
  Main services can be easily authenticated using PAM-LDAP, but is harder for Samba.
